--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ionicons": "^3.0.0",
     "meteor-node-stubs": "~0.2.4",
     "meteor-rxjs": "^0.4.7",
+    "moment": "^2.18.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.3.0",
     "zone.js": "^0.8.5"
