--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/platform-browser-dynamic": "^4.0.1",
     "@angular/platform-server": "^4.0.1",
     "@ionic/storage": "^2.0.1",
+    "angular2-moment": "^1.3.3",
     "babel-runtime": "^6.20.0",
     "ionic-angular": "^2.3.0",
     "ionic-native": "^2.9.0",
